--- a/app/src/css/CompanyDetailsPage.css
+++ b/app/src/css/CompanyDetailsPage.css
@@ -1,4 +1,4 @@
-/* src/css/CompanyListPage.css */
+/* src/css/CompanyDetailsPage.css */
 .page-container {
     width: 100%;
     height: 100%;
@@ -10,21 +10,41 @@
     overflow: scroll;
 }
 
-.header-container { /* Add this block */
+.header-container {
     margin: 0 auto 20px auto;
 }
 
 .logo {
-    display: flex;
-    align-items: flex-start;
+    margin-bottom: 20px;
     height: 120px;
 }
 
 .app-title {
     font-family: 'Voces', 'Open Sans', arial, sans-serif;
     font-size: 24px;
-    color: #333; /* Ensure contrast */
+    color: #333;
+    margin-top: 20px;
+    margin-bottom: 20px;
     text-align: left;
+    width: 100%; /* Ensure the title takes the full width of the header container */
+}
+
+.tab-buttons {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.tab-buttons button {
+    margin: 0 10px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.tab-buttons .active {
+    font-weight: bold;
+    border-bottom: 2px solid #333;
 }
 
 .cards-container {
@@ -33,14 +53,9 @@
     align-items: center;
 }
 
-.search-input {
-    display: block;
-    width: 51%;
+.inner-details-container {
+    width: 60%;
     margin: 0 auto 20px auto;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    font-size: 16px;
 }
 
 .search-input, .projcard, .header-container {
@@ -48,14 +63,13 @@
     margin: 0 auto 20px auto;
 }
 
-/* Responsive adjustments */
 @media (max-width: 600px) {
     .page-container {
         width: 100%;
         padding: 10px;
     }
 
-    .search-input, .projcard, .header-container {
+    .header-container, .search-input, .projcard {
         width: 90%;
     }
 }
