--- a/app/src/css/CompanyCard.css
+++ b/app/src/css/CompanyCard.css
@@ -6,9 +6,11 @@
     border-radius: 10px;
     background-color: #fff;
     border: 2px solid #ddd;
+    width: 60%;
     font-size: 18px;
     overflow: hidden;
     cursor: pointer;
+    margin: 0 auto 20px auto;
     box-shadow: 0 4px 21px -12px rgba(0, 0, 0, .66);
     transition: box-shadow 0.2s ease, transform 0.2s ease;
 }
