--- a/app/src/css/CompanyDetailsPage.css
+++ b/app/src/css/CompanyDetailsPage.css
@@ -1,38 +1,71 @@
-/* src/css/CompanyDetailsPage.css */
 .page-container {
     width: 100%;
     height: 100%;
-    padding: 20px;
+    padding-top: 200px; /* Adjust padding to ensure enough space for header, title, and search bar */
     background-color: #fff;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    overflow: scroll;
+    overflow: hidden;  /* Ensure vertical scrolling */
 }
 
 .header-container {
-    margin: 0 auto 20px auto;
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    background-color: #fff;
+    width: auto;
+    position: fixed; /* Fix position at the top */
+    top: 0;
+    left: 0;
+    z-index: 2;
 }
 
 .logo {
-    margin-bottom: 20px;
     height: 120px;
+    margin-right: 20px;
+}
+
+.fixed-container {
+    position: fixed;
+    top: 35px; /* Adjust based on the height of the header */
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+    padding-top: 35px;
+    z-index: 1;
+
 }
 
 .app-title {
     font-family: 'Voces', 'Open Sans', arial, sans-serif;
     font-size: 24px;
     color: #333;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin: 0 auto;
+    width: 60%;
     text-align: left;
-    width: 100%; /* Ensure the title takes the full width of the header container */
+}
+
+.navigation-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 60%;
+    margin: 35px auto;
+}
+
+.back-arrow {
+    font-size: 16px;
+    color: #000000;
+    background: none;
+    border: none;
+    cursor: pointer;
 }
 
 .tab-buttons {
     display: flex;
     justify-content: center;
-    margin-bottom: 20px;
+    position: relative;
+    left: -35%;
 }
 
 .tab-buttons button {
@@ -40,11 +73,6 @@
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
-}
-
-.tab-buttons .active {
-    font-weight: bold;
-    border-bottom: 2px solid #333;
 }
 
 .cards-container {
@@ -58,18 +86,21 @@
     margin: 0 auto 20px auto;
 }
 
-.search-input, .projcard, .header-container {
+.search-input, .projcard, .navigation-bar {
     width: 60%;
-    margin: 0 auto 20px auto;
 }
 
 @media (max-width: 600px) {
     .page-container {
         width: 100%;
-        padding: 10px;
+        padding-top: 220px; /* Adjust padding for smaller screens */
     }
 
-    .header-container, .search-input, .projcard {
+    .fixed-container, .app-title, .tab-buttons, .search-input, .projcard, .navigation-bar {
         width: 90%;
+    }
+    
+    .tab-buttons {
+        margin: 20px auto;
     }
 }
