--- a/app/src/css/CompanyListPage.css
+++ b/app/src/css/CompanyListPage.css
@@ -1,30 +1,61 @@
-/* src/css/CompanyListPage.css */
 .page-container {
     width: 100%;
     height: 100%;
-    padding: 20px;
+    padding-top: 200px; /* Adjust padding to ensure enough space for header, title, and search bar */
     background-color: #fff;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    overflow: scroll;
+    overflow: hidden; /* Ensure the main container does not scroll */
 }
 
-.header-container { /* Add this block */
-    margin: 0 auto 20px auto;
+.header-container {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    background-color: #fff;
+    width: auto;
+    position: fixed; /* Fix position at the top */
+    top: 0;
+    left: 0;
+    z-index: 2;
 }
 
 .logo {
-    display: flex;
-    align-items: flex-start;
     height: 120px;
+    margin-right: 20px;
+}
+
+.fixed-container {
+    position: fixed;
+    top: 35px; /* Adjust based on the height of the header */
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+    padding-top: 35px;
+    z-index: 1;
 }
 
 .app-title {
     font-family: 'Voces', 'Open Sans', arial, sans-serif;
     font-size: 24px;
     color: #333; /* Ensure contrast */
-    text-align: left;
+    margin: 0 auto; /* Adjust margin */
+    width: 60%;
+}
+
+.search-input {
+    display: block;
+    width: 60%;
+    margin: 20px auto;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.scrollable-container {
+    height: 100%;
+    overflow-y: auto; /* Enable vertical scrolling */
 }
 
 .cards-container {
@@ -33,29 +64,24 @@
     align-items: center;
 }
 
-.search-input {
-    display: block;
-    width: 51%;
-    margin: 0 auto 20px auto;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    font-size: 16px;
-}
-
-.search-input, .projcard, .header-container {
+.projcard {
     width: 60%;
-    margin: 0 auto 20px auto;
+    margin: 20px auto;
 }
 
 /* Responsive adjustments */
 @media (max-width: 600px) {
     .page-container {
         width: 100%;
-        padding: 10px;
+        padding-top: 200px; /* Adjust padding for smaller screens */
     }
 
-    .search-input, .projcard, .header-container {
+    .fixed-container, .search-input, .projcard {
         width: 90%;
+    }
+    
+    .scrollable-container {
+        margin-top: 220px; /* Ensure it starts below the fixed elements */
+        height: calc(100% - 220px); /* Adjust height to fill the remaining space */
     }
 }
