--- a/app/src/css/Button.css
+++ b/app/src/css/Button.css
@@ -1,46 +1,44 @@
 .bn30 {
-    border: 5em;
-    cursor: pointer;
-    outline: none;
-    font-size: 16px;
-    -webkit-transform: translate(0);
-    transform: translate(0);
-    background-image: linear-gradient(45deg, #fba199, #f2def2);
-    padding: 0.7em 2em;
-    border-radius: 65px;
-    box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
-    -webkit-transition: box-shadow 0.25s;
-    transition: box-shadow 0.25s;
-    color: rgb(0, 0, 0);
-  }
-  
-  .bn30 .text {
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-image: linear-gradient(45deg, #4568dc, #b06ab3);
-  }
-  
-  .bn30:after {
-    content: "";
-    border-radius: 18px;
-    position: absolute;
-    margin: 4px;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    z-index: -1;
-    background: #ffffff;
-  }
-  
-  .bn30:hover {
-    background-image: linear-gradient(-5deg, #f2def2, #fba199);
-    box-shadow: 0 12px 24px rgba(128, 128, 128, 0.1);
-  }
-  
-  .bn30:hover .text {
-    background-image: linear-gradient(-45deg, #f2def2, #fba199);
-  }
+  border: 26vw; /* 5em remains as 5em because it's relative to font size */
+  cursor: pointer;
+  outline: none;
+  font-size: 0.833vw; /* 16px to vw */
+  -webkit-transform: translate(0);
+  transform: translate(0);
+  background-image: linear-gradient(45deg, #fba199, #f2def2);
+  padding: 3.65vw 10.42vw; /* 0.7em 2em remains as it is */
+  border-radius: 3.39vw; /* 65px to vw */
+  box-shadow: 0.052vw 0.052vw 0.52vw rgba(255, 255, 255, 0.438); /* 1px 1px 10px to vw */
+  -webkit-transition: box-shadow 0.25s;
+  transition: box-shadow 0.25s;
+  color: rgb(0, 0, 0);
+}
 
-  
+.bn30 .text {
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(45deg, #4568dc, #b06ab3);
+}
+
+.bn30:after {
+  content: "";
+  border-radius: 1.9vw; /* 18px to vw */
+  position: absolute;
+  margin: 0.208vw; /* 4px to vw */
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+  background: #ffffff;
+}
+
+.bn30:hover {
+  background-image: linear-gradient(-5deg, #f2def2, #fba199);
+  box-shadow: 0 0.625vw 1.25vw rgba(128, 128, 128, 0.1); /* 0 12px 24px to vw */
+}
+
+.bn30:hover .text {
+  background-image: linear-gradient(-45deg, #f2def2, #fba199);
+}
