--- a/app/src/css/CompanyDetailsPage.css
+++ b/app/src/css/CompanyDetailsPage.css
@@ -1,56 +1,38 @@
 .page-container {
-    width: 100%;
-    height: 100%;
-    padding-top: 200px; /* Adjust padding to ensure enough space for header, title, and search bar */
+    width: 100vw;
+    height: 100vh;
+    padding-top: 15vw; /* Adjust padding to ensure enough space for header, title, and search bar */
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: .5px;
     text-align: center;
     overflow: hidden;  /* Ensure vertical scrolling */
 }
 
-.header-container {
-    display: flex;
-    align-items: center;
-    padding: 20px;
-    background-color: #fff;
-    width: auto;
-    position: fixed; /* Fix position at the top */
-    top: 0;
-    left: 0;
-    z-index: 2;
-}
-
-.logo {
-    height: 120px;
-    margin-right: 20px;
-}
-
 .fixed-container {
     position: fixed;
-    top: 35px; /* Adjust based on the height of the header */
+    top: 3vw; /* Adjust based on the height of the header */
     left: 0;
-    width: 100%;
+    width: 100vw;
     background-color: #fff;
-    padding-top: 35px;
+    padding-top: 2vw;
     z-index: 1;
-
 }
 
 .app-title {
     font-family: 'Voces', 'Open Sans', arial, sans-serif;
-    font-size: 24px;
+    font-size: 2vw;
     color: #333;
     margin: 0 auto;
-    width: 60%;
+    width: 60vw;
     text-align: left;
 }
 
 .app-desc {
     font-family: 'Voces', 'Open Sans', arial, sans-serif;
-    font-size: 15px;
+    font-size: 1vw;
     color: #888888;
-    margin: 10px auto;
-    width: 60%;
+    margin: 1vw auto;
+    width: 60vw;
     text-align: left;
 }
 
@@ -58,12 +40,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 60%;
-    margin: 20px auto;
+    width: 60vw;
+    margin: 1vw auto;
 }
 
 .back-arrow {
-    font-size: 16px;
+    font-size: 1vw;
     color: #000000;
     background: none;
     border: none;
@@ -74,13 +56,12 @@
     display: flex;
     justify-content: center;
     position: relative;
-    left: -35%;
 }
 
 .tab-buttons button {
-    margin: 0 10px;
-    padding: 10px 20px;
-    font-size: 16px;
+    margin: 0 1vw;
+    padding: 1vw 2vw;
+    font-size: 1vw;
     cursor: pointer;
 }
 
@@ -92,25 +73,23 @@
 
 .inner-details-container {
     
-    width: 60%;
-    margin: 0 auto 20px auto;
+    width: 60vw;
+    margin: 1vh auto 1vw auto;
 }
 
 .search-input, .projcard, .navigation-bar {
-    width: 60%;
+    width: 60vw;
 }
 
 @media (max-width: 600px) {
     .page-container {
-        width: 100%;
-        padding-top: 220px; /* Adjust padding for smaller screens */
+        width: 100vw;
+        padding-top: 15vw; /* Adjust padding for smaller screens */
     }
 
-    .fixed-container, .app-title, .tab-buttons, .search-input, .projcard, .navigation-bar {
-        width: 90%;
-    }
+    
     
     .tab-buttons {
-        margin: 20px auto;
+        margin: 1vw auto;
     }
 }
