--- a/app/src/css/CompanyListPage.css
+++ b/app/src/css/CompanyListPage.css
@@ -1,60 +1,43 @@
 .page-container {
-    width: 100%;
-    height: 100%;
-    padding-top: 200px; /* Adjust padding to ensure enough space for header, title, and search bar */
+    width: 100vw;
+    height: 100vh;
+    padding-top: 15vw; /* Adjust padding to ensure enough space for header, title, and search bar */
     background-color: #fff;
     border-radius: 10px;
     text-align: center;
     overflow: hidden; /* Ensure the main container does not scroll */
 }
 
-.header-container {
-    display: flex;
-    align-items: center;
-    padding: 20px;
-    background-color: #fff;
-    width: auto;
-    position: fixed; /* Fix position at the top */
-    top: 0;
-    left: 0;
-    z-index: 2;
-}
-
-.logo {
-    height: 120px;
-    margin-right: 20px;
-}
-
 .fixed-container {
     position: fixed;
-    top: 35px; /* Adjust based on the height of the header */
+    top: 2vw; /* Adjust based on the height of the header */
     left: 0;
-    width: 100%;
+    width: 100vw;
     background-color: #fff;
-    padding-top: 35px;
+    padding-top: 2vw;
     z-index: 1;
 }
 
 .app-title {
     font-family: 'Voces', 'Open Sans', arial, sans-serif;
-    font-size: 24px;
+    font-size: 2vw;
     color: #333; /* Ensure contrast */
     margin: 0 auto; /* Adjust margin */
-    width: 60%;
+    width: 60vw;
 }
 
 .search-input {
     display: block;
-    width: 60%;
-    margin: 20px auto;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    font-size: 16px;
+    width: 6vw;
+    margin: 2vw auto;
+    padding: .6vw;
+    border: .1vw solid #ddd;
+    border-radius: .5vw;
+    font-size: 1vw;
 }
 
 .scrollable-container {
-    height: 100%;
+    height: 100vh;
     overflow-y: auto; /* Enable vertical scrolling */
 }
 
@@ -65,23 +48,18 @@
 }
 
 .projcard {
-    width: 60%;
-    margin: 20px auto;
+    width: 60vw;
+    margin: 1vw auto;
 }
 
 /* Responsive adjustments */
 @media (max-width: 600px) {
     .page-container {
-        width: 100%;
-        padding-top: 200px; /* Adjust padding for smaller screens */
-    }
-
-    .fixed-container, .search-input, .projcard {
-        width: 90%;
+        width: 100vw;
+        padding-top: 15vw; /* Adjust padding for smaller screens */
     }
     
     .scrollable-container {
-        margin-top: 220px; /* Ensure it starts below the fixed elements */
-        height: calc(100% - 220px); /* Adjust height to fill the remaining space */
+        height: calc(100vh - 15vh); /* Adjust height to fill the remaining space */
     }
 }
